@@ -1,3 +1,7 @@
+2006-01-18  Roger While <simrw@sim-basis.de>
+
+	* parser.y : Allow EQUAL in COMPUTE, Fix OBJECT-COMPUTER
+
 2006-01-17  Roger While <simrw@sim-basis.de>
 
 	* cobc.c : Don't warn -x/-m when using -E
